--- a/package.json
+++ b/package.json
@@ -13,28 +13,36 @@
 	"license": "ISC",
 	"dependencies": {
 		"@koa/cors": "^3.1.0",
+		"@koa/multer": "^3.0.0",
+		"@simplewebauthn/server": "^3.0.0",
+		"base64url": "^3.0.1",
 		"dotenv": "^10.0.0",
+		"firebase-admin": "^9.11.0",
 		"koa": "^2.13.1",
 		"koa-bodyparser": "^4.3.0",
 		"koa-json": "^2.0.2",
 		"koa-logger": "^3.2.1",
 		"koa-passport": "^4.1.4",
 		"koa-router": "^10.0.0",
-		"passport-discord": "^0.1.4"
+		"koa-session": "^6.2.0",
+		"passport-discord": "^0.1.4",
+		"stripe": "^8.167.0",
+		"uuid-v4": "^0.1.0"
 	},
 	"devDependencies": {
 		"@types/koa": "^2.13.4",
 		"@types/koa__cors": "^3.0.3",
+		"@types/koa__multer": "^2.0.3",
 		"@types/koa-bodyparser": "^4.3.2",
 		"@types/koa-json": "^2.0.20",
 		"@types/koa-logger": "^3.1.1",
 		"@types/koa-passport": "^4.0.2",
 		"@types/koa-router": "^7.4.4",
+		"@types/koa-session": "^5.10.4",
 		"@types/node": "^16.4.3",
 		"@types/passport-discord": "^0.1.4",
-		"firebase-admin": "^9.11.0",
+		"@types/useragent": "^2.3.1",
 		"nodemon": "^2.0.12",
-		"stripe": "^8.165.0",
 		"ts-node": "^10.1.0",
 		"typescript": "^4.3.5"
 	}
