--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@types/useragent": "^2.3.1",
 		"nodemon": "^2.0.12",
 		"ts-node": "^10.1.0",
+		"tsconfig-paths": "^3.11.0",
 		"typescript": "^4.3.5"
 	}
 }
