using fakerjs for now

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,9 @@
 		}
 	},
 	"compileOnSave": true,
+	"ts-node": {
+		"files": true
+	},
+	"files": ["src/index.ts", "src/global.d.ts"],
 	"include": ["./src"]
 }
