--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"build": "rm -rf ./dist && npx tsc",
 		"start": "npm run build && node -r tsconfig-paths/register dist/index.js",
-		"dev": "nodemon"
+		"dev": "nodemon -r tsconfig-paths/register ./src/index.ts"
 	},
 	"keywords": [],
 	"author": "",
@@ -14,37 +14,42 @@
 	"dependencies": {
 		"@koa/cors": "^3.1.0",
 		"@koa/multer": "^3.0.0",
-		"@simplewebauthn/server": "^3.0.0",
+		"@simplewebauthn/server": "^4.2.0",
 		"base64url": "^3.0.1",
 		"dotenv": "^10.0.0",
-		"firebase-admin": "^9.11.0",
-		"koa": "^2.13.1",
+		"firebase-admin": "^10.0.1",
+		"koa": "^2.13.4",
 		"koa-bodyparser": "^4.3.0",
 		"koa-json": "^2.0.2",
 		"koa-logger": "^3.2.1",
 		"koa-passport": "^4.1.4",
-		"koa-router": "^10.0.0",
+		"koa-router": "^10.1.1",
 		"koa-session": "^6.2.0",
+		"multer": "^1.4.4",
 		"passport-discord": "^0.1.4",
-		"stripe": "^8.167.0",
+		"stripe": "^8.195.0",
 		"uuid-v4": "^0.1.0"
 	},
 	"devDependencies": {
+		"@firebase/app-compat": "^0.1.12",
+		"@firebase/app-types": "^0.7.0",
+		"@types/faker": "^5.5.9",
 		"@types/koa": "^2.13.4",
-		"@types/koa__cors": "^3.0.3",
-		"@types/koa__multer": "^2.0.3",
-		"@types/koa-bodyparser": "^4.3.2",
+		"@types/koa-bodyparser": "^4.3.5",
 		"@types/koa-json": "^2.0.20",
-		"@types/koa-logger": "^3.1.1",
-		"@types/koa-passport": "^4.0.2",
+		"@types/koa-logger": "^3.1.2",
+		"@types/koa-passport": "^4.0.3",
 		"@types/koa-router": "^7.4.4",
 		"@types/koa-session": "^5.10.4",
-		"@types/node": "^16.4.3",
-		"@types/passport-discord": "^0.1.4",
+		"@types/koa__cors": "^3.1.1",
+		"@types/koa__multer": "^2.0.4",
+		"@types/node": "^16.11.19",
+		"@types/passport-discord": "^0.1.5",
 		"@types/useragent": "^2.3.1",
-		"nodemon": "^2.0.12",
-		"ts-node": "^10.1.0",
-		"tsconfig-paths": "^3.11.0",
-		"typescript": "^4.3.5"
+		"faker": "github:abdo643-HULK/faker.js#master",
+		"nodemon": "^2.0.15",
+		"ts-node": "^10.4.0",
+		"tsconfig-paths": "^3.12.0",
+		"typescript": "^4.5.4"
 	}
 }
