--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
 	"dependencies": {
 		"@koa/cors": "^3.1.0",
 		"@koa/multer": "^3.0.0",
-		"@simplewebauthn/server": "^4.2.0",
+		"@simplewebauthn/server": "^4.4.0",
 		"base64url": "^3.0.1",
-		"dotenv": "^10.0.0",
 		"firebase-admin": "^10.0.2",
 		"koa": "^2.13.4",
 		"koa-bodyparser": "^4.3.0",
@@ -27,28 +26,30 @@
 		"koa-session": "^6.2.0",
 		"multer": "^1.4.4",
 		"passport-discord": "^0.1.4",
-		"stripe": "^8.201.0",
+		"stripe": "^8.203.0",
 		"uuid-v4": "^0.1.0"
 	},
 	"devDependencies": {
-		"@firebase/app-compat": "^0.1.16",
+		"@faker-js/faker": "^6.0.0-alpha.7",
+		"@firebase/app-compat": "^0.1.18",
 		"@firebase/app-types": "^0.7.0",
-		"@types/faker": "^5.5.9",
+		"@types/faker": "^6.6.9",
 		"@types/koa": "^2.13.4",
 		"@types/koa-bodyparser": "^4.3.5",
 		"@types/koa-json": "^2.0.20",
 		"@types/koa-logger": "^3.1.2",
 		"@types/koa-passport": "^4.0.3",
 		"@types/koa-router": "^7.4.4",
-		"@types/koa-session": "^5.10.4",
+		"@types/koa-session": "^5.10.6",
 		"@types/koa__cors": "^3.1.1",
 		"@types/koa__multer": "^2.0.4",
-		"@types/node": "^16.11.21",
+		"@types/node": "^16.11.25",
 		"@types/passport-discord": "^0.1.5",
 		"@types/useragent": "^2.3.1",
+		"dotenv": "^16.0.0",
 		"faker": "github:abdo643-HULK/faker.js#master",
 		"nodemon": "^2.0.15",
-		"ts-node": "^10.4.0",
+		"ts-node": "^10.5.0",
 		"tsconfig-paths": "^3.12.0",
 		"typescript": "^4.5.5"
 	}
