--- a/package.json
+++ b/package.json
@@ -11,30 +11,36 @@
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
+	"type": "module",
 	"dependencies": {
 		"@koa/cors": "^3.1.0",
 		"@koa/multer": "^3.0.0",
 		"@simplewebauthn/server": "^4.4.0",
 		"base64url": "^3.0.1",
+		"chalk": "^5.0.0",
+		"fastify": "^3.27.2",
+		"fastify-cors": "^6.0.3",
+		"fastify-passport": "^0.5.0",
 		"firebase-admin": "^10.0.2",
 		"koa": "^2.13.4",
-		"koa-bodyparser": "^4.3.0",
+		"koa-body": "^4.2.0",
 		"koa-json": "^2.0.2",
 		"koa-logger": "^3.2.1",
 		"koa-passport": "^4.1.4",
 		"koa-router": "^10.1.1",
 		"koa-session": "^6.2.0",
 		"multer": "^1.4.4",
+		"node-fetch": "^3.2.1",
 		"passport-discord": "^0.1.4",
-		"stripe": "^8.203.0",
+		"stripe": "^8.207.0",
 		"uuid-v4": "^0.1.0"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^6.0.0-alpha.7",
-		"@firebase/app-compat": "^0.1.18",
+		"@firebase/app-compat": "^0.1.19",
 		"@firebase/app-types": "^0.7.0",
 		"@types/koa": "^2.13.4",
-		"@types/koa-bodyparser": "^4.3.5",
+		"@types/koa-bodyparser": "^4.3.6",
 		"@types/koa-json": "^2.0.20",
 		"@types/koa-logger": "^3.1.2",
 		"@types/koa-passport": "^4.0.3",
@@ -42,13 +48,13 @@
 		"@types/koa-session": "^5.10.6",
 		"@types/koa__cors": "^3.1.1",
 		"@types/koa__multer": "^2.0.4",
-		"@types/node": "^16.11.25",
+		"@types/node": "^16.11.26",
 		"@types/passport-discord": "^0.1.5",
 		"@types/useragent": "^2.3.1",
 		"dotenv": "^16.0.0",
 		"nodemon": "^2.0.15",
-		"ts-node": "^10.5.0",
-		"tsconfig-paths": "^3.12.0",
-		"typescript": "^4.5.5"
+		"ts-node": "^10.7.0",
+		"tsconfig-paths": "^3.13.0",
+		"typescript": "^4.6.2"
 	}
 }
