--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"base64url": "^3.0.1",
 		"chalk": "^5.0.0",
 		"fastify": "^3.27.2",
+		"fastify-auth": "^1.1.0",
 		"fastify-cors": "^6.0.3",
 		"fastify-passport": "^0.5.0",
 		"firebase-admin": "^10.0.2",
