--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"moduleResolution": "Node",
 		"rootDir": "./src",
 		"outDir": "dist",
-		"esModuleInterop": true,
+		"esModuleInterop": false,
 		"noImplicitReturns": true,
 		"noUnusedLocals": false,
 		"noImplicitAny": false,
