--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"build": "rm -rf ./dist && npx tsc",
 		"start": "npm run build && node -r tsconfig-paths/register dist/index.js",
-		"dev": "nodemon -r tsconfig-paths/register ./src/index.ts"
+		"dev": "nodemon src/index.ts"
 	},
 	"keywords": [],
 	"author": "",
@@ -22,6 +22,8 @@
 		"fastify-auth": "^1.1.0",
 		"fastify-cors": "^6.0.3",
 		"fastify-passport": "^0.5.0",
+		"fastify-secure-session": "^3.0.0",
+		"fastify-sensible": "^3.1.2",
 		"firebase-admin": "^10.0.2",
 		"koa": "^2.13.4",
 		"koa-body": "^4.2.0",
@@ -40,6 +42,8 @@
 		"@faker-js/faker": "^6.0.0-alpha.7",
 		"@firebase/app-compat": "^0.1.19",
 		"@firebase/app-types": "^0.7.0",
+		"@swc/core": "^1.2.150",
+		"@swc/helpers": "^0.3.6",
 		"@types/koa": "^2.13.4",
 		"@types/koa-bodyparser": "^4.3.6",
 		"@types/koa-json": "^2.0.20",
@@ -54,6 +58,8 @@
 		"@types/useragent": "^2.3.1",
 		"dotenv": "^16.0.0",
 		"nodemon": "^2.0.15",
+		"pino-pretty": "^7.5.3",
+		"regenerator-runtime": "^0.13.9",
 		"ts-node": "^10.7.0",
 		"tsconfig-paths": "^3.13.0",
 		"typescript": "^4.6.2"
