--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
 	"compileOnSave": true,
 	"ts-node": {
 		"files": true,
-		"esm": true
+		"esm": true,
+		"swc": true,
+		"require": ["tsconfig-paths/register"]
 	},
 	"files": ["src/index.ts", "src/global.d.ts"],
 	"include": ["./src"]
