--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
 	"license": "ISC",
 	"type": "module",
 	"dependencies": {
-		"@koa/cors": "^3.1.0",
+		"@koa/cors": "^3.2.0",
 		"@koa/multer": "^3.0.0",
 		"@simplewebauthn/server": "^4.4.0",
 		"base64url": "^3.0.1",
-		"chalk": "^5.0.0",
-		"fastify": "^3.27.2",
+		"chalk": "^5.0.1",
+		"fastify": "^3.27.4",
 		"fastify-auth": "^1.1.0",
 		"fastify-cors": "^6.0.3",
 		"fastify-passport": "^0.5.0",
@@ -33,16 +33,16 @@
 		"koa-router": "^10.1.1",
 		"koa-session": "^6.2.0",
 		"multer": "^1.4.4",
-		"node-fetch": "^3.2.1",
+		"node-fetch": "^3.2.3",
 		"passport-discord": "^0.1.4",
-		"stripe": "^8.207.0",
+		"stripe": "^8.209.0",
 		"uuid-v4": "^0.1.0"
 	},
 	"devDependencies": {
-		"@faker-js/faker": "^6.0.0-alpha.7",
+		"@faker-js/faker": "^6.0.0-beta.0",
 		"@firebase/app-compat": "^0.1.19",
 		"@firebase/app-types": "^0.7.0",
-		"@swc/core": "^1.2.150",
+		"@swc/core": "^1.2.155",
 		"@swc/helpers": "^0.3.6",
 		"@types/koa": "^2.13.4",
 		"@types/koa-bodyparser": "^4.3.6",
@@ -61,7 +61,7 @@
 		"pino-pretty": "^7.5.3",
 		"regenerator-runtime": "^0.13.9",
 		"ts-node": "^10.7.0",
-		"tsconfig-paths": "^3.13.0",
+		"tsconfig-paths": "^3.14.0",
 		"typescript": "^4.6.2"
 	}
 }
