--- a/package.json
+++ b/package.json
@@ -35,17 +35,17 @@
 		"multer": "^1.4.4",
 		"node-fetch": "^3.2.3",
 		"passport-discord": "^0.1.4",
-		"stripe": "^8.209.0",
+		"stripe": "^8.210.0",
 		"uuid-v4": "^0.1.0"
 	},
 	"devDependencies": {
-		"@faker-js/faker": "^6.0.0-beta.0",
-		"@firebase/app-compat": "^0.1.19",
+		"@faker-js/faker": "^6.0.0",
+		"@firebase/app-compat": "^0.1.20",
 		"@firebase/app-types": "^0.7.0",
-		"@swc/core": "^1.2.155",
-		"@swc/helpers": "^0.3.6",
+		"@swc/core": "^1.2.159",
+		"@swc/helpers": "^0.3.8",
 		"@types/koa": "^2.13.4",
-		"@types/koa-bodyparser": "^4.3.6",
+		"@types/koa-bodyparser": "^4.3.7",
 		"@types/koa-json": "^2.0.20",
 		"@types/koa-logger": "^3.1.2",
 		"@types/koa-passport": "^4.0.3",
@@ -58,7 +58,7 @@
 		"@types/useragent": "^2.3.1",
 		"dotenv": "^16.0.0",
 		"nodemon": "^2.0.15",
-		"pino-pretty": "^7.5.3",
+		"pino-pretty": "^7.5.4",
 		"regenerator-runtime": "^0.13.9",
 		"ts-node": "^10.7.0",
 		"tsconfig-paths": "^3.14.0",
