--- a/package.json
+++ b/package.json
@@ -13,36 +13,36 @@
 	"license": "ISC",
 	"type": "module",
 	"dependencies": {
-		"@simplewebauthn/server": "^4.4.0",
+		"@fastify/auth": "^3.0.2",
+		"@fastify/cors": "^8.0.0",
+		"@fastify/passport": "^2.0.1",
+		"@fastify/secure-session": "^5.2.0",
+		"@fastify/sensible": "^5.1.0",
+		"@simplewebauthn/server": "^5.3.0",
 		"chalk": "^5.0.1",
-		"fastify": "3.28.0",
-		"fastify-auth": "^1.2.0",
-		"fastify-cors": "^6.1.0",
-		"fastify-passport": "^0.5.0",
-		"fastify-secure-session": "3.1.0",
-		"fastify-sensible": "^3.2.0",
-		"firebase-admin": "^10.2.0",
+		"fastify": "4.2.1",
 		"multer": "^1.4.4",
-		"node-fetch": "^3.2.4",
+		"node-fetch": "^3.2.8",
 		"passport-discord": "^0.1.4",
-		"stripe": "^8.222.0",
+		"stripe": "^9.13.0",
 		"uuid-v4": "^0.1.0"
 	},
 	"devDependencies": {
-		"@faker-js/faker": "^6.3.1",
-		"@firebase/app-compat": "^0.1.25",
+		"@faker-js/faker": "^7.3.0",
+		"@firebase/app-compat": "^0.1.29",
 		"@firebase/app-types": "^0.7.0",
-		"@swc/core": "^1.2.187",
-		"@swc/helpers": "^0.3.13",
-		"@types/node": "^16.11.36",
-		"@types/passport-discord": "^0.1.5",
+		"@swc/core": "^1.2.215",
+		"@swc/helpers": "^0.4.3",
+		"@types/node": "^16.11.45",
+		"@types/passport-discord": "^0.1.6",
 		"@types/useragent": "^2.3.1",
 		"dotenv": "^16.0.1",
-		"nodemon": "^2.0.16",
-		"pino-pretty": "^7.6.1",
+		"firebase-admin": "^11.0.0",
+		"nodemon": "^2.0.19",
+		"pino-pretty": "^8.1.0",
 		"regenerator-runtime": "^0.13.9",
-		"ts-node": "^10.7.0",
-		"tsconfig-paths": "^3.14.1",
-		"typescript": "^4.6.4"
+		"ts-node": "^10.9.1",
+		"tsconfig-paths": "^4.0.0",
+		"typescript": "^4.7.4"
 	}
 }
